# mcp-a2a

./: .gitignore  README.md  pyproject.toml
examples/a2a_example/: README.md
examples/a2a_example/agent/: README.md  agent.py  agent_executor.py  main.py
examples/a2a_example/client/: README.md  main.py  push_notification_auth.py  push_notification_listener.py
examples/mcp_example/: README.md  app.py  mcp_server.py  rag_core.py  utils.py
