[project]
name = "mcp-a2a-dmi"
version = "0.1.0"
description = ""
authors = [
    {name = "Michele Ferro"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph (>=0.4.5,<0.5.0)",
    "mcp[cli] (>=1.9.1,<2.0.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "langchain-mcp-tools (>=0.2.4,<0.3.0)",
    "langchain-mcp-adapters (>=0.1.1,<0.2.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "a2a-sdk (>=0.2.4,<0.3.0)",
    "click (>=8.2.1,<9.0.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "asyncclick (>=8.1.8,<9.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "jwcrypto (>=1.5.6,<2.0.0)",
    "sse-starlette (>=2.3.5,<3.0.0)",
    "starlette (>=0.46.2,<0.47.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
